    - cif_parse:
      - the output format.
    - COD::ShowStruct.
  * Fixed:
    - cif2cod:
      - description of command line option --use-all-datablocks.
    - cif2ref and cif_filter:
      - standardising symmetry data item recognition.
    - cif_molecule, cif_p1, cif_reduce_Niggli and oqmd2cif:
      - adding '_space_group_name_*' to the output instead of deprecated
        '_symmetry_space_group_name_*'.

cod-tools (2.3)

  * Added:
    - cif2xyz:
      - command line option --add-xyz-header to produce XYZ format as
        defined in http://openbabel.org/wiki/XYZ_%28format%29.
    - cif_cod_check:
      - the --check-pd-block-relations and its inverse options that control
        the execution of checks related to powder diffraction blocks.
    - cif_filter:
      - the --exclude-placeholder-tags, --placeholder-tag-list options
        and a related subroutine that enables the removal of data items
        with placeholder values.
      - the --exclude-redundant-chemical-names option and a related
        subroutine that enables the removal of data items related to
        chemical names that contain redundant values.
    - cif_fix_values:
      - removing URL and doi: prefixes from the values of CIF data items
        that are supposed to hold DOIs.
    - cif_hkl_check:
      - performing powder diffraction checks.
    - cif_molecule and cif_p1:
      - prefix for preserved original CIF data items was changed from
        '_cod_src_' to '_[local]_cod_src_'.
    - cif_validate:
      - reporting non-looped CIF data items occurring in CIF loops.
      - reporting existence of both replaced and replacing data items in
        the same CIF data block.
      - single quotes are now used to delimit both the data names and the
        data values in validation messages;
      - updating the standard uncertainty validation logic to ignore
        non-numeric values;
      - slightly rewording some of the validation messages.
    - COD::CIF::Data: