@@ -34,8 +34,8 @@
 {
 """"'""": 1
 }
-ERROR, can not store value ''''"' in a quoted string
-ERROR, can not store value '"""'' in a quoted string
+ERROR, cannot store value ''''"' in a quoted string
+ERROR, cannot store value '"""'' in a quoted string
 
 {
 '''
